--- a/application.properties
+++ b/application.properties
@@ -2,6 +2,6 @@ gateway.ip=192.168.1.6
 
 #any custom name can be given
 token.expiration_time=43200000
-token.secret=fgbvvfggghh1234
+token.secret=fgbvvfggghh1234updated
 
 login.url.path=/users/login
